moved some things around

--- a/index.html
+++ b/index.html
@@ -49,12 +49,10 @@
       line-height: 1.5;
     }
 
-    .register-link {
+    .register-link, .faq-button {
       display: inline-block;
       margin-top: 20px;
       padding: 12px 24px;
-      background-color: #28a745;
-      color: white;
       font-size: 1em;
       border-radius: 6px;
       text-decoration: none;
@@ -62,8 +60,22 @@
       transition: background-color 0.3s ease;
     }
 
+    .register-link {
+      background-color: #28a745;
+      color: white;
+    }
+
     .register-link:hover {
       background-color: #218838;
+    }
+
+    .faq-button {
+      background-color: #007bff;
+      color: white;
+    }
+
+    .faq-button:hover {
+      background-color: #0056b3;
     }
 
     .video-container, .video-container.small {
@@ -167,6 +179,14 @@
     <a class="register-link" href="https://kycampcalvary.com" target="_blank" rel="noopener noreferrer">
       Register or Learn More at CampCalvary.com
     </a>
+    <br/>
+    <a class="faq-button" href="Frequently%20Asked%20Questions-jr2.pdf" target="_blank" rel="noopener noreferrer">
+      Frequently Asked Questions
+    </a>
+    <br/>
+    <a class="facebook-link" href="https://www.facebook.com/ccjunior2" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-facebook"></i> Visit us on Facebook
+    </a>
   </div>
 
   <div id="countdown">Loading countdown...</div>
@@ -200,9 +220,6 @@
   <footer>
     &copy; 2025 Junior 2 | All Rights Reserved
     <br />
-    <a class="facebook-link" href="https://www.facebook.com/ccjunior2" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-facebook"></i> Visit us on Facebook
-    </a>
   </footer>
 
   <script>
